example/kubernetes/mattermost-ldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost-ldap
  labels:
    app: mattermost-ldap
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: mattermost-ldap
  template:
    metadata:
      labels:
        app: mattermost-ldap
    spec:
      containers:
        - name: mattermost-ldap
          image: osixia/mattermost-ldap:1.0.1
          args: ["--copy-service"]
          imagePullPolicy: Always
          volumeMounts:
            - name: container-run-volume
              mountPath: /container/run
            - name: ldap-certs-volume
              mountPath: /container/service/ldap-client/assets/certs
            - name: database-certs-volume
              mountPath: /container/service/mariadb-client/assets/certs
            - name: https-certs-volume
              mountPath: /container/service/mattermost-ldap/assets/apache2/certs
          ports:
            - containerPort: 443
      volumes:
        - name: "container-run-volume"
          emptyDir: {}
