example/kubernetes/mattermost-ldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-ldap
  labels:
    app: mattermost-ldap
spec:
  ports:
    - port: 443
  selector:
    app: mattermost-ldap
